// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectController should not create invalid project 1`] = `
Object {
  "message": "Validation failed:
{
  \\"title\\": \\"Expected string, but was missing\\",
  \\"description\\": \\"Expected string, but was missing\\"
}.
Object should match { title: string; description: string; }",
}
`;

exports[`ProjectController should return 400 for project invalid update 1`] = `
Object {
  "message": "Validation failed:
{
  \\"title\\": \\"Expected string, but was missing\\",
  \\"description\\": \\"Expected string, but was missing\\"
}.
Object should match { title: string; description: string; }",
}
`;

exports[`ProjectController should return all projects 1`] = `
Array [
  Object {
    "created": "2022-11-21T11:21:14.543Z",
    "description": "新しいフレッシュホームページの制作過程はこちら",
    "id": 1,
    "title": "ホームページのリニューアル",
    "updated": "2022-11-21T11:21:14.543Z",
  },
  Object {
    "created": "2022-11-21T11:21:14.544Z",
    "description": "新しいチェックアウト フォームでユーザー エクスペリエンスを向上",
    "id": 2,
    "title": "チェックアウトフォームのリファクタリング",
    "updated": "2022-11-21T11:21:14.544Z",
  },
  Object {
    "created": "2022-11-21T11:21:14.545Z",
    "description": null,
    "id": 3,
    "title": "実験プロジェクト",
    "updated": "2022-11-21T11:21:14.545Z",
  },
]
`;

exports[`ProjectController should return project with id 1 1`] = `
Object {
  "created": "2022-11-21T11:21:14.543Z",
  "description": "新しいフレッシュホームページの制作過程はこちら",
  "id": 1,
  "title": "ホームページのリニューアル",
  "updated": "2022-11-21T11:21:14.543Z",
}
`;
